# mojito-reflection

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
demo/: .gitignore  CMakeLists.txt  compile.sh  compile_c++.sh  compile_cc.sh  main.cpp
demo/demo_lib/: CMakeLists.txt  test.cpp
generator/: .gitignore  compile.sh  compile_c++.sh  compile_cc.sh
generator/src/: ClassParser.cpp  CompilerArgs.cpp  CompilerArgs.hpp  CompilerInfo.cpp  CompilerInfo.hpp  CompillerArgs.cpp  CompillerArgs.hpp  CustomCompilationDB.cpp  CustomCompilationDB.hpp  GeneratorArgs.cpp  GeneratorArgs.hpp  PersistentReflectionDB.cpp  PersistentReflectionDB.hpp  main.cpp
reflection/: CMakeLists.txt
reflection/src/: AnyArg.hpp  BasicTypesReflection.hpp  Constructor.hpp  Field.hpp  Function.hpp  ObjectId.hpp  Reflection.cpp  Reflection.hpp  ReflectionMarkers.hpp  Type.hpp  TypeId.hpp  Utility.hpp  Value.hpp  ValueRef.hpp
src/: ClassParser.cpp  ClassParser.hpp  CompillerArgs.cpp  CompillerArgs.hpp  CustomCompilationDB.cpp  CustomCompilationDB.hpp  PersistentReflectionDB.cpp  generate_method.cpp  generate_method.h  main.cpp  main_old.cpp
tests/: CMakeLists.txt  compile.sh  compile_c++.sh  compile_cc.sh  main.cpp  r_test.cpp  test.cpp
tests/src/: main.cpp  test_Function.cpp  test_Type.cpp  test_TypeId.cpp  test_Value_ValueRef_AnyArg.cpp
